cell assembly improvement

--- a/_posts/2024-03-10-funes-ml.md
+++ b/_posts/2024-03-10-funes-ml.md
@@ -109,12 +109,13 @@ This demonstrates that the concept neurons in the hippocampus (and surrounding a
 
 Nevertheless, using a single neuron to encode each concept would be inefficient and would fail to capture the relationships between concepts. Instead, as Quiroga suggests in his opinion paper, overlapping representations may be key to learning associations.
 
-Imagine a cell assembly, a group of neurons, that encodes the concept of 'Luke Skywalker'. Some neurons in this assembly also respond to Yoda, while others also fire in response to Darth Vader. When the 'Luke Skywalker cell assembly' is activated (for example, when seeing his picture), it can trigger associated concepts like Yoda or Darth Vader through these overlapping neural patterns. This happens because neurons that participate in multiple concept representations act as bridges, allowing pattern completion to activate related concepts.
-These partially overlapping representations could form the neural basis for how we encode and learn associations and episodic memories.
+Imagine a cell assembly, a group of neurons, that encodes the concept of "Luke Skywalker". Some neurons in this assembly also respond to Yoda, while others also fire in response to Darth Vader. When the "Luke Skywalker cell assembly" is activated (for example, when seeing his picture), it can trigger associated concepts like Yoda or Darth Vader through these overlapping neural patterns. This happens because neurons that participate in multiple concept representations act as bridges, allowing pattern completion to activate related concepts. 
+
+Then, it's not that there's one neuron that encodes "Luke Skywalker" uniquely, but rather a specific combination of unique and overlapping neurons that creates a distinct neural signature for Luke Skywalker. This distributed representation allows for both specificity (unique identification) and associative connections (linking to related concepts). Moreover, these partially overlapping representations could form the neural basis for how we encode and learn associations and episodic memories. 
 
 <div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
   <img src="/assets/images/graph-luke.png" alt="Luke-graph" style="max-width: 70%; height: auto;">
-  <p style="text-align: center; margin-top: 10px;">Figure X: Some examples of the algebraic relation between neurons</p>
+  <p style="text-align: center; margin-top: 10px;">Figure X: Cell assembly for Star Wars characters</p>
 </div>
 
 In short, the same neuron can fire for different but related concepts (like Luke Skywalker and Yoda), and there are very few of these neurons, each responding to only a few specific concepts. This is called a sparse representation, and it is also widely used in machine learning, for example in sparse autoencoders that encode information using sparse vectors [3] (vectors where most values are 0 and only a few have non-zero values).
@@ -159,11 +160,18 @@ While the neuron-level analysis revealed many concepts CLIP understands, it did 
 
 However, this geographic knowledge isn't stored in the way one might expect. Despite extensive searching, the team did not found any single "San Francisco neuron", nor does the concept seem to be composed of simpler elements like "California" plus "city". This suggests that some of CLIP's more sophisticated knowledge is encoded in more complex ways, perhaps as vectors, directions in the embedding space, or other geometric structures we don't yet fully understand.
 
-This discovery actually makes sense, right? After all, neural networks have to deal with way more concepts than they have neurons, so it's natural that some concepts won't map cleanly to single neurons. This result made me think about how incredibly inefficient would be for both artificial and biological systems to use a single neuron to encode just one concept, leading us to one of the most fascinating hypothesis in Machine Learning.
+This discovery actually makes sense, right? After all, neural networks have to deal with way more concepts than they have neurons, so it's natural that some concepts won't map cleanly to single neurons. When I was researching about concept cells in my internship, one of my main concerns was how incredibly inefficient would be for both artificial and biological systems to use a single neuron to encode just one concept. This problem could be related to one of the most fascinating hypothesis in Machine Learning.
 
 ## The Superposition Hypothesis: How Neurons Share the Cognitive Load
 
-Testing
+First thing to note here is that this is a hypothesis, not a proven fact, as well as my interpretation of it.
+
+To-do:
+- Introduce the superposition hypothesis
+- Introduce the interesting definitions, like what are features(concepts)
+- Explain better the concept of superposition
+- Relate it to the last part, the neural part
+- 
 
 
 ## References
