--- a/_posts/2024-03-10-funes-ml.md
+++ b/_posts/2024-03-10-funes-ml.md
@@ -41,9 +41,14 @@ In short, as Borges usually does in many of his stories, he starts with a simple
 
 ## Solomon Shereshevskii
 
+<div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
+  <img src="https://s3.abcstatics.com/Media/201508/02/Shereshevski--644x362.jpg" alt="HMBrain" style="max-width: 100%; height: auto;">
+  <p style="text-align: center; margin-top: 10px;">Figure X: Solomon Shereshevskii</p>
+</div>
+
 The subsequent section, now exploring neuroscience and real experiments, draws heavily from Rodrigo Quian Quiroga's book "Borges and memory" [1], which I also highly recommend.
 
-Solomon Shereshevskii, a journalist at a Moscow newspaper renowned for his extraordinary memory, started a remarkable research journey after a co-worker suggested he consult with psychologist Alexander Romanovich Luria. In their initial meeting, Shereshevskii astonished Luria with his prodigious memory, effortlessly reproducing sequences of up to 70 random letters or numbers. Moreover he was able to recite the sequences backwards, irrespective of whether they consisted of sounds, numbers, or words - Shershevskii simply visualized them in his memory and could effortlessly recall them.
+Solomon Shereshevskii, a journalist at a Moscow newspaper renowned for his extraordinary memory, started a remarkable research journey after a co-worker suggested he consult with psychologist Alexander Romanovich Luria. In their initial meeting, Shereshevskii astonished Luria with his prodigious memory, effortlessly reproducing sequences of up to 70 random letters or numbers. Moreover he was able to recite the sequences backwards, irrespective of whether they consisted of sounds, numbers, or words; Shereshevskii simply visualized them in his memory and could effortlessly recall them.
 
 On another experiment, Luria asked him to recall a random mathematical formula:
 
@@ -160,9 +165,33 @@ While the neuron-level analysis revealed many concepts CLIP understands, it did 
 
 However, this geographic knowledge isn't stored in the way one might expect. Despite extensive searching, the team did not found any single "San Francisco neuron", nor does the concept seem to be composed of simpler elements like "California" plus "city". This suggests that some of CLIP's more sophisticated knowledge is encoded in more complex ways, perhaps as vectors, directions in the embedding space, or other geometric structures we don't yet fully understand.
 
-This discovery actually makes sense, right? After all, neural networks have to deal with way more concepts than they have neurons, so it's natural that some concepts won't map cleanly to single neurons. When I was researching about concept cells in my internship, one of my main concerns was how incredibly inefficient would be for both artificial and biological systems to use a single neuron to encode just one concept. This problem could be related to one of the most fascinating hypothesis in Machine Learning.
+This discovery actually makes sense, right? After all, neural networks have to deal with way more concepts than they have neurons, so it's natural that some concepts won't map cleanly to single neurons. When I was researching about concept cells in my internship, one of my main concerns was how incredibly inefficient would be for both artificial and biological systems to use a single neuron to encode just one concept. This problem could be related to one of the most fascinating concepts in Artificial Neural Networks.
 
-## The Superposition Hypothesis: How Neurons Share the Cognitive Load
+## Polysemanticity and Superposition in Neural Networks
+
+To interpret Artificial Neural Networks effectively, it would be ideal if each individual neuron encoded a single human-interpretable concept. However, in reality, neurons can be either "monosemantic", meaning they respond to a single feature, or "polysemantic", meaning they respond to many unrelated features [].
+
+<div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
+  <img src="/assets/images/polysemantic-neuron" alt="polysemantic-neuron" style="max-width: 100%; height: auto;">
+  <p style="text-align: center; margin-top: 10px;">Figure X: Polysemantic neuron which responds to cat faces, fronts of cars, and cat legs</p>
+</div>
+
+The reasons behind this phenomenon are not yet fully understood, but several hypotheses attempt to explain it. One of the most interesting is the Superposition hypothesis, proposed by well-known interpretability researchers at Anthropic.
+
+They use toy models, small ReLU networks trained on synthetic data with sparse input features, to investigate how and when models exhibit superposition. That is, when they represent more features than they have dimensions.
+
+Consider a simplified model that takes five features of different importance levels into an embeds them into a two-dimensional space, using a ReLU activation function, while varying feature sparsity. In the dense case (where features have meaningful values most of the time), the model behaves similarly to Principal Component Analysis, learning to represent only the two most significant features as an orthogonal basis while discarding the remaining three. 
+
+However, when feature sparsity is introduced (features are frequently zero or inactive), the model demonstrates superposition: it can encode additional features by allowing controlled interference between them, and more surprisingly, can perform computational operations while maintaining this superposed state.
+
+<div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
+  <img src="/assets/images/sparsity.png" alt="polysemantic-neuron" style="max-width: 100%; height: auto;">
+  <p style="text-align: center; margin-top: 10px;">Figure X: As sparsity increases, the model fits more features than it has dimensions.</p>
+</div>
+
+This observation leads to a super interesting interpretation of neural network behavior: the networks we train in practice may be effectively operating as compressed simulations of much larger, highly sparse networks. That is, our trained models might be implementing the same computational patterns and representing the same features as a hypothetical larger network would, but in a more compact form where multiple features and operations coexist in the same dimensional space through controlled interference patterns.
+
+
 
 First thing to note here is that this is a hypothesis, not a proven fact, as well as my interpretation of it.
 
