--- a/_posts/2024-03-10-funes-ml.md
+++ b/_posts/2024-03-10-funes-ml.md
@@ -12,16 +12,16 @@ date: 2024-03-10
 
 
 
-During my research internship at CSIC, I had the opportunity to work on a project exploring the relationship between memory and machine learning under the supervision of Jesús Marco de Lucas. Our research focused on the work of Rodrigo Q. Quiroga regarding concept cells and the role of the hippocampus in memory formation and learning, as well as how this concept abstraction works in machine learning. This topic was already fascinating, but I was immensely surprised to discover that Quiroga had written a book connecting my (current) favourit writer, Borges, and memory [1]. He relates Borges's story "Funes the Memorious" to how memory works and its significance for learning. 
+During my research internship at CSIC, I had the opportunity to work on a project exploring the relationship between memory and deep learning under the supervision of Jesús Marco de Lucas. Our research focused on the work of Rodrigo Q. Quiroga regarding concept cells and the role of the hippocampus in memory formation and learning, as well as how this concept abstraction works in deep learning models. This topic was already fascinating, but I was immensely surprised to discover that Quiroga had written a book connecting my (current) favourit writer, Borges, and memory [1]. He relates Borges's story "Funes the Memorious" to how memory works and its significance for learning. 
 
-I have been in love with Borges writing since my first year of undergraduate studies, so I found this connection especially interesting. Naturally, I read Quiroga's book, and it inspired me to follow a similar path. While Quiroga's book moves from Borges to memory, I plan to start from his insights and explore how they connect memory to machine learning research. In particular, how concepts are encoded and stored in deep learning models and their importance for learning.
+I have been in love with Borges writing since my first year of undergraduate studies, so I found this connection especially interesting. Naturally, I read Quiroga's book, and it inspired me to follow a similar path. While Quiroga's book moves from Borges to memory, I plan to start from his insights and explore how they connect memory to deep learning research. In particular, how concepts are encoded and stored in deep learning models and their importance for learning.
 
 
 ## Funes the Memorious
 
 Let's begin with a brief overview of the narrative. Nevertheless, I urge you to immerse yourself in the story directly (it spans less than 10 pages) since any summary will inevitably fall short in capturing the full depth and magnitude of Borges's work. Additionally, I'll be adding several direct quotes from the story, as I think there's no better way to convey the intricacies of the discussed concepts than through Borges' own words.
 
-Funes the Memorious is the story of a man who, after a severe head injury, discovers an extraordinary ability, or perhaps, a curse, that grants him the capacity to remember every single detail with impeccable clarity. The argument is simple, but the real genius of Borges is that he explores the consequences of this power with his superb imagination, crafting a response that is both realistic, profound and oppressive. As we will see, Borges, without any formal knowledge of neuroscience, intuitively predicts the potential repercussions of such an ability with striking accuracy.
+Funes the Memorious is the story of a man who, after a severe head injury, discovers an extraordinary ability, or perhaps, a curse, that grants him the capacity to remember every single detail with impeccable clarity. The argument is simple, but the real genius of Borges is that he explores the consequences of this power with his superb imagination, crafting a response that is both realistic, profound and oppressive. As we will see, Borges, without any formal knowledge of neuroscience, intuitively predicts the potential consequences of such an ability with impressive accuracy.
 
 Borges describes Funes' talent in the following way:
 
@@ -43,7 +43,7 @@ In short, as Borges usually does in many of his stories, he starts with a simple
 
 <div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
   <img src="https://s3.abcstatics.com/Media/201508/02/Shereshevski--644x362.jpg" alt="HMBrain" style="max-width: 100%; height: auto;">
-  <p style="text-align: center; margin-top: 10px;">Figure X: Solomon Shereshevskii</p>
+  <p style="text-align: center; margin-top: 10px;">Figure 2: Solomon Shereshevskii</p>
 </div>
 
 The subsequent section, now exploring neuroscience and real experiments, draws heavily from Rodrigo Quian Quiroga's book "Borges and memory" [1], which I also highly recommend.
@@ -93,7 +93,7 @@ Thanks to Molaison's case and subsequent studies, we now understand the crucial 
 
 <div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
   <img src="https://www.brainfacts.org/-/media/Brainfacts2/In-the-Lab/Tools-and-Techniques/Article-Images/PatientHMBrain---082718.png" alt="HMBrain" style="max-width: 70%; height: auto;">
-  <p style="text-align: center; margin-top: 10px;">Figure X: Henry Molaison brain compared to an ordinary brain.</p>
+  <p style="text-align: center; margin-top: 10px;">Figure 3: Henry Molaison brain compared to an ordinary brain.</p>
 </div>
 
 ## Hippocampus and Concept Cells
@@ -107,7 +107,7 @@ Later, in his opinion paper Quiroga called them "concept cells" or "concept neur
 
 <div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
   <img src="/assets/images/luke.jpg" alt="Luke" style="max-width: 100%; height: auto;">
-  <p style="text-align: center; margin-top: 10px;">Figure X: Some examples of the algebraic relation between neurons</p>
+  <p style="text-align: center; margin-top: 10px;">Figure 4: An specific neuron firing when the concept "Luke" is present.</p>
 </div>
 
 This demonstrates that the concept neurons in the hippocampus (and surrounding areas) encode representations at such a high level of abstraction that they can be triggered by different types of stimuli. Furthermore, Quiroga showed that these abstract representations can form rapidly. In one experiment, he and his team presented photos and text of themselves to patients who had only known them for two days. Remarkably, the patients already had neurons that fired in response to their photos and names.
@@ -120,7 +120,7 @@ Then, it's not that there's one neuron that encodes "Luke Skywalker" uniquely, b
 
 <div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
   <img src="/assets/images/graph-luke.png" alt="Luke-graph" style="max-width: 70%; height: auto;">
-  <p style="text-align: center; margin-top: 10px;">Figure X: Cell assembly for Star Wars characters</p>
+  <p style="text-align: center; margin-top: 10px;">Figure 5: Cell assembly for Star Wars characters</p>
 </div>
 
 In short, the same neuron can fire for different but related concepts (like Luke Skywalker and Yoda), and there are very few of these neurons, each responding to only a few specific concepts. This is called a sparse representation, and it is also widely used in machine learning, for example in sparse autoencoders that encode information using sparse vectors [3] (vectors where most values are 0 and only a few have non-zero values).
@@ -145,7 +145,7 @@ The second approach is more straightforward: researchers feed dataset examples t
 
 <div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
   <img src="/assets/images/multimodal-neuron-example.png" alt="example-multimodal-neurons" style="max-width: 100%; height: auto;">
-  <p style="text-align: center; margin-top: 10px;">Figure X: Biological neurons, such as the famed Halle Berry neuron discovered by Quiroga, do not fire for visual clusters of ideas, but semantic clusters. At the highest layers of CLIP, similar semantic invariance is found.</p>
+  <p style="text-align: center; margin-top: 10px;">Figure 6: Biological neurons, such as the famed Halle Berry neuron discovered by Quiroga, do not fire for visual clusters of ideas, but semantic clusters. At the highest layers of CLIP, similar semantic invariance is found.</p>
 </div>
 
 Similar to the neurons discovered by Quiroga, researchers found that CLIP neurons in ResNet50 are "multi-faceted" [6]. This means that a single neuron might respond strongly to both photos and drawings of the same concept, or even to written words representing that concept. For instance, one neuron might activate in response to a photo of Spider-Man, a cartoon Spider-Man, or even the words "Spider" or "Spider-Man", suggesting that it has learned to recognize the concept of "Spider-Man" across various forms of representation.
@@ -158,7 +158,7 @@ For example, when CLIP processes the word "surprised", it doesn't just register 
 
 <div style="display: flex; flex-direction: column; align-items: center; margin: 20px 0;">
   <img src="/assets/images/neuron-algebra.png" alt="neuron-algebra" style="max-width: 100%; height: auto;">
-  <p style="text-align: center; margin-top: 10px;">Figure X: Some examples of the algebraic relation between neurons</p>
+  <p style="text-align: center; margin-top: 10px;">Figure 7: Some examples of the algebraic relation between neurons</p>
 </div>
 
 While the neuron-level analysis revealed many concepts CLIP understands, it did not tell the complete story of the model's representation capabilities. An illustrative example is CLIP's accurate geolocation ability, demonstrated by its creators at OpenAI. The model can identify locations with surprising precision, down to specific neighborhoods within cities. In the experiments with personal photos, CLIP consistently recognized images taken in San Francisco, sometimes even identifying specific districts like Twin Peaks.
@@ -180,7 +180,7 @@ The reasons behind this phenomenon are not yet fully understood, but several hyp
 
 They use toy models, small ReLU networks trained on synthetic data with sparse input features, to investigate how and when models exhibit superposition. That is, when they represent more features than they have dimensions.
 
-Consider a simplified model that takes five features of different importance levels into an embeds them into a two-dimensional space, using a ReLU activation function, while varying feature sparsity. In the dense case (where features have meaningful values most of the time), the model behaves similarly to Principal Component Analysis, learning to represent only the two most significant features as an orthogonal basis while discarding the remaining three. 
+Consider a simplified model that takes five features of different importance levels and embeds them into a two-dimensional space, using a ReLU activation function, while varying feature sparsity. In the dense case (where features have meaningful values most of the time), the model behaves similarly to Principal Component Analysis, learning to represent only the two most significant features as an orthogonal basis while discarding the remaining three. 
 
 However, when feature sparsity is introduced (features are frequently zero or inactive), the model demonstrates superposition: it can encode additional features by allowing controlled interference between them, and more surprisingly, can perform computational operations while maintaining this superposed state.
 
@@ -191,17 +191,27 @@ However, when feature sparsity is introduced (features are frequently zero or in
 
 This observation leads to a super interesting interpretation of neural network behavior: the networks we train in practice may be effectively operating as compressed simulations of much larger, highly sparse networks. That is, our trained models might be implementing the same computational patterns and representing the same features as a hypothetical larger network would, but in a more compact form where multiple features and operations coexist in the same dimensional space through controlled interference patterns.
 
+But why is this happening?
 
+As we have seen before, the key lies in a fundamental truth about our world: sparsity. Think about looking at a photo: at any given spot, you're unlikely to find a dog's head, a horizontal line, or a perfect curve. In human language, most words aren't about Martin Luther King or about Science Fiction literature. This sparsity principle, combined with two crucial mathematical foundations, enables neural networks to achieve efficient information encoding.
 
-First thing to note here is that this is a hypothesis, not a proven fact, as well as my interpretation of it.
+The first mathematical fact is the Johnson-Lindenstrauss lemma, which demonstrates that while an *n*-dimensional space can only contain *n* truly orthogonal vectors, it can fit *exp(n)* "almost orthogonal" vectors. The second is compressed sensing, which shows that **sparse** vectors can be accurately reconstructed even after projection into lower-dimensional spaces, something impossible with dense vectors.
 
-To-do:
-- Introduce the superposition hypothesis
-- Introduce the interesting definitions, like what are features(concepts)
-- Explain better the concept of superposition
-- Relate it to the last part, the neural part
-- 
+Neural networks exploit these properties by representing concepts as almost-orthogonal directions in the vector space of neuron outputs. Since the features are only almost-orthogonal, one feature activating looks like other features slightly activating. Tolerating this "noise" or "interference" comes at a cost. But for neural networks with highly sparse features, this cost may be outweighed by the benefit of being able to represent more features. The network further mitigates this cost through the non-linear activation functions that filter out low-level noise. This elegant trade-off allows neural networks to represent exponentially more features than their dimensional space would traditionally allow, with the sparse nature of concepts ensuring the benefits substantially outweigh the interference costs.
 
+One of the most fascinating aspects of superposition is how it emerges during neural network training through distinct phase transitions. When training a model, each feature can reach one of three possible states: (1) it may remain unlearned, (2) become encoded in superposition with other features, or (3) acquire its own dedicated dimension in the representation space. These transitions don't occur gradually but rather exhibit sharp, discontinuous changes characteristic of phase transitions in physical systems.
+
+The conditions ruling these transitions depend on a complex interplay between feature sparsity and relative importance. While sparsity is a prerequisite for superposition, the relationship isn't linear, it interacts with feature importance in determining the final representational state. This phase-change behavior appears in both empirical observations and theoretical models, where the optimal weight configurations show abrupt, discontinuous shifts in both magnitude and degree of superposition. 
+
+But this is not everything! After deeper exploration, features seem to organize themselves into geometric structures such as pentagons and tetrahedrons!
+
+When neural networks learn to represent features, they don't always give each feature its own complete dimension. Instead, features can share space in fascinating ways, occupying what they call "fractional dimensions". I don't want to make this post mathematically heavy, so instead of copying the formula I will try to describe its meaning.
+
+The dimensionality measure tells us two crucial things about how a feature is represented in the network: How strongly it's encoded versus how much it has to share its space with other features. If a feature has a strong presence in the dimension but doesn't share space with many other features, it gets a higher dimensionality score. Conversely, if it's strongly represented but heavily overlaps with many other features, its effective dimensionality will be lower because it's sharing its space. Then, this ratio gives us a measure of how much of a dimension each feature truly "owns" in the network's representation space.
+
+What's fascinating is that these fractional dimensions aren't random. Features tend to organize themselves into specific, stable patterns where they share space in precise ways. For example, when two features pair up perfectly, each gets exactly half a dimension (*Dimensionality=1/2*). What's even more interesting is that when we add up all these fractional dimensions across features, they typically sum to the total number of dimensions available. The network is trying its best to efficiently use the available space.
+
+This discovery reveals that superposition isn't just one thing. It's actually a collection of distinct states, each with its own geometric pattern of how features share space. As the authors explain, it's similar to how ice isn't just "frozen water" but can form different crystal structures depending on conditions. As we change how features are presented to the network during training, it jumps between these different superposition states, each representing a different way of efficiently packing features into its limited dimensional space.
 
 ## References
 
